--- a/index.html
+++ b/index.html
@@ -3,34 +3,54 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style.css">
-<title>FITNESS</title>
+	<title>FITNESS</title>
 </head>
 
 <body>
 
-<div>
-<img src="img/logo.png" height="51" alt="Logo FITNESS">
-<ul>
-    <li><a href="#">Главная</a></li><li><a href="#">Товары</a></li><li><a href="#">О_нас</a></li><li><a href="#">Контакты</a></li>
-</ul>
+<div class="box">
 
-<aside>
+	<div class="header">
+	    <img src="img/logo.png" height="100%" alt="Logo FITNESS">
+		<ul class="menu">
+    		<li><a href="#">Главная</a></li>
+    		<li><a href="#">Товары</a></li>
+    		<li><a href="#">О_нас</a></li>
+    		<li><a href="#">Контакты</a></li>
+		</ul>
+	</div>
 
-	<li><a href="#">Ноутбуки</a></li>
-	<li><a href="#">Планшеты</a></li>
-	<li><a href="#">Телефоны</a></li>
-	<li><a href="#">Телевизоры</a></li>
-	<li><a href="#">Бытовая техника</a></li>
-	<li><a href="#">Автотовары</a></li>
+	<div class="container clearfix">
 
-</aside>
+		<div class="sidebar">
+			<ul>
+				<li><a href="#">Ноутбуки</a></li>
+				<li><a href="#">Планшеты</a></li>
+				<li><a href="#">Телефоны</a></li>
+				<li><a href="#">Телевизоры</a></li>
+				<li><a href="#">Бытовая техника</a></li>
+				<li><a href="#">Автотовары</a></li>
+			</ul>
+		</div>
 
-<img src="img/bike.png" height="40%" alt="Velobike">
+		<div class="content">
+			<img src="img/velo.png" width="100%" alt="Velobike">
+			<div class="text"><p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків щрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в елетронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
+			</div>
+		</div>
 
-<p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків щрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в елетронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
-<ul>
-    <li><a href="#">Главная</a></li><li><a href="#">Товары</a></li><li><a href="#">О_нас</a></li><li><a href="#">Контакты</a></li><li><a href="#">2014 &copy All rights reserved</a></li>
-</ul>
+	</div>
+
+		<div class="footer">
+			<ul>
+    			<li><a href="#">Главная</a></li>
+    			<li><a href="#">Товары</a></li>
+    			<li><a href="#">О_нас</a></li>
+    			<li><a href="#">Контакты</a></li>
+    			<li><a href="#">2014 &copy All rights reserved</a></li>
+			</ul>
+		</div>
+
 </div>
 
 </body>
