--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 		</ul>
 	</div>
 
-	<div class="container clearfix">
-
+	<div class="contener clearfix">
 		<div class="sidebar">
 			<ul>
 				<li><a href="#">Ноутбуки</a></li>
@@ -35,22 +34,16 @@
 
 		<div class="content">
 			<img src="img/velo.png" width="100%" alt="Velobike">
-			<div class="text"><p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків щрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в елетронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
+			<div class="text"><p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризува-лась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
 			</div>
 		</div>
-
-	</div>
-
+	
 		<div class="footer">
 			<ul>
-    			<li><a href="#">Главная</a></li>
-    			<li><a href="#">Товары</a></li>
-    			<li><a href="#">О_нас</a></li>
-    			<li><a href="#">Контакты</a></li>
-    			<li><a href="#">2014 &copy All rights reserved</a></li>
+    			<li><a href="#">Главная</a></li><li><a href="#">Товары</a></li><li><a href="#">О_нас</a></li><li><a href="#">Контакты</a></li><li><a href="#">2014 &copy All rights reserved</a></li>
 			</ul>
 		</div>
-
+	</div>
 </div>
 
 </body>
