--- a/index.html
+++ b/index.html
@@ -3,48 +3,45 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style.css">
-	<title>FITNESS</title>
+	<title>Cadastre-se</title>
 </head>
-
 <body>
-
-<div class="box">
-
-	<div class="header">
-	    <img src="img/logo.png" height="100%" alt="Logo FITNESS">
+	<div class="container">
 		<ul class="menu">
-    		<li><a href="#">Главная</a></li>
-    		<li><a href="#">Товары</a></li>
-    		<li><a href="#">О_нас</a></li>
-    		<li><a href="#">Контакты</a></li>
-		</ul>
+			<li><a href="#">Meu YouBike</a></li>
+    		<li><a href="#">Vender</a></li>
+    		<li><a href="#">Forum</a></li>
+    		<li><a href="#">Contato</a></li>
+    		<li><a href="#">Ajuda</a></li>
+   		</ul>
+   		<ul class="menu2">
+   			<li><a href="#">Minhas Ofertas</a></li>
+    		<li><a href="#">Ola! Entrar ou Cadastre-se</a></li>
+    	</ul>
+    	<div class="center-block">
+    		<p class="line">Cadastre-se</p>
+    		<ul class="button">
+   				<li><a href="#"><h1>f</h1></a></li>
+   				<li><a href="#"><b>Log In</b> with <b>Facebook</b></a></li>
+   				<li><a href="#"><h4> > </h4></a></li>
+    		</ul>
+    		<h3><span>OU</span></h3>
+    		<ul  class="forma">
+    			<li><a href="#">First name</a></li>
+   				<li><a href="#">Last name</a></li>
+   				<li><a href="#">Email Address</a></li>
+   				<li><a href="#">Choose Password</a></li>
+   				<li><a href="#">Password Confirm</a></li>
+       		</ul>
+       		<form action="input1.php">
+      			<p><input type="checkbox" name="option1" value="a1" checked>  Send me Youbike updates and tips</p>
+  			</form>
+  			<div class="button2">
+  				<p><a href="#">Create my Account</a></p>
+   			</div>
+   			<p class="end">By clicking the button above, you agree to the Terms of Service Xiew our Privacy Policy.</p>
+       	</div>      
 	</div>
-
-	<div class="contener clearfix">
-		<div class="sidebar">
-			<ul>
-				<li><a href="#">Ноутбуки</a></li>
-				<li><a href="#">Планшеты</a></li>
-				<li><a href="#">Телефоны</a></li>
-				<li><a href="#">Телевизоры</a></li>
-				<li><a href="#">Бытовая техника</a></li>
-				<li><a href="#">Автотовары</a></li>
-			</ul>
-		</div>
-
-		<div class="content">
-			<img src="img/velo.png" width="100%" alt="Velobike">
-			<div class="text"><p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризува-лась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
-			</div>
-		</div>
 	
-		<div class="footer">
-			<ul>
-    			<li><a href="#">Главная</a></li><li><a href="#">Товары</a></li><li><a href="#">О_нас</a></li><li><a href="#">Контакты</a></li><li><a href="#">2014 &copy All rights reserved</a></li>
-			</ul>
-		</div>
-	</div>
-</div>
-
 </body>
 </html>
